Bug 40288: Apply overflow css to all of patronbriefinfo li's
and patroninfo-section li's too.

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1887,6 +1887,11 @@ i {
 
 li {
     &.email {
+    }
+}
+
+.patronbriefinfo, .patroninfo-section {
+    li {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -1895,11 +1900,8 @@ li {
 
 .patronbriefinfo {
     li {
-        &.email {
-            font-size: 87%;
-            padding: 0 10px 0 0;
-            width: 90%;
-        }
+        padding: 0 10px 0 0;
+        width: 90%;
     }
 }
 
